ci: fix for eksctl to pin to a specific ami
error seen when using latest ami (id: ami-0b1c494fc850ef41c / name: amazon-eks-node-1.27-v20240202) as of 02/06/2024 --
pod/zarf-docker-registry-86d779b879-gmx52                   Failed to pull image "127.0.0.1:30636/library/registry:2.8.3": rpc error: code = Unknown desc = failed to pull and unpack image "127.0.0.1:30636/library/registry:2.8.3": failed to resolve reference "127.0.0.1:30636/library/registry:2.8.3": failed to do request: Head "https://127.0.0.1:30636/v2/library/registry/manifests/2.8.3": net/http: TLS handshake timeout

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -40,3 +40,8 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
+    ami: ami-018391ee17790abe8
+    amiFamily: AmazonLinux2
+    overrideBootstrapCommand: |
+      #!/bin/bash
+      /etc/eks/bootstrap.sh bigbang-aws-install --container-runtime containerd
