--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -40,7 +40,7 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
-    ami: ami-018391ee17790abe8
+    ami: "###ZARF_VAR_AMI_ID###"
     amiFamily: AmazonLinux2
     overrideBootstrapCommand: |
       #!/bin/bash
