--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Lint YAML files
         run: yamllint . -c .yamllint --no-warnings
   test-release:
+    permissions:
+      id-token: write
+      contents: read
     needs: yaml-lint
     if: needs.yaml-lint.result == 'success' || needs.yaml-lint.result == 'skipped'
     uses: ./.github/workflows/test-k3d-package.yaml
