--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -55,6 +55,7 @@ jobs:
           echo "deploy_info=${DEPLOY_INFO}" >> $GITHUB_OUTPUT
 
   update-release-notes:
+    permissions: write-all
     needs: [tag-new-version, build-release-notes-update]
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/update-release-info-from-tag.yaml
@@ -65,6 +66,9 @@ jobs:
     secrets: inherit
 
   publish-ci-dubbd-iac-aws:
+    permissions:
+      contents: read
+      packages: write
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/publish.dubbd.package.yaml
@@ -73,6 +77,9 @@ jobs:
     secrets: inherit
 
   publish-dubbd-aws:
+    permissions:
+      contents: read
+      packages: write
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/publish.dubbd.package.yaml
@@ -81,6 +88,9 @@ jobs:
     secrets: inherit
 
   publish-dubbd-rke2:
+    permissions:
+      contents: read
+      packages: write
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/publish.dubbd.package.yaml
@@ -89,6 +99,9 @@ jobs:
     secrets: inherit
 
   publish-dubbd-k3d:
+    permissions:
+      contents: read
+      packages: write
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/publish.dubbd.package.yaml
@@ -97,6 +110,9 @@ jobs:
     secrets: inherit
 
   publish-dubbd-core:
+    permissions:
+      contents: read
+      packages: write
     needs: tag-new-version
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/publish.dubbd.package.yaml
