--- a/k3d/tasks/setup.yaml
+++ b/k3d/tasks/setup.yaml
@@ -3,8 +3,8 @@ tasks:
     actions:
       - description: "Create the K3d cluster"
         # renovate: datasource=github-tags depName=defenseunicorns/uds-k3d versioning=semver
-        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.1.12-multi --confirm"
+        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.6.0 --confirm --set K3D_EXTRA_ARGS='--agents 2'"
 
       - description: "Initialize the cluster with Zarf"
         # renovate: datasource=github-tags depName=defenseunicorns/init versioning=semver
-        cmd: "zarf package deploy oci://defenseunicorns/init:v0.31.3-${UDS_ARCH} --confirm --components=git-server"
+        cmd: "zarf package deploy oci://defenseunicorns/init:v0.32.4 --confirm --components=git-server"
