fix: add exception for uds-dev-stack

--- a/k3d/values/local-dev.yaml
+++ b/k3d/values/local-dev.yaml
@@ -7,6 +7,9 @@ kyvernoPolicies:
               - Pod
             names:
               - "helper-pod-create-pvc-*"
+        - resources:
+            namespaces: 
+              - uds-dev-stack
 
     policies:
       disallow-host-namespaces:
