--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -17,7 +17,7 @@ metadata:
 
 variables:
   - name: HOST_PATH
-    default: /var/lib/rancher/k3s/storage/*
+    default: /*
     prompt: false
   - name: CONTAINER_RUNTIME_SOCKET
     default: "/run/k3s/containerd/containerd.sock"
