fix: include uds-dev-stack ns for add'l policy

--- a/k3d/values/local-dev.yaml
+++ b/k3d/values/local-dev.yaml
@@ -47,6 +47,8 @@ kyvernoPolicies:
                   - resources:
                       namespaces: ###ZARF_VAR_EXEMPT_NAMESPACES###
                   - resources:
+                      namespaces: uds-dev-stack
+                  - resources:
                       kinds:
                         - Pod
                       names:
