--- a/k3d/zarf-config.yaml
+++ b/k3d/zarf-config.yaml
@@ -17,6 +17,6 @@ package:
       # -- TLS cert
       cert_file: bigbang.dev.cert
       # -- k3d host path
-      host_path: "/*"
+      host_path: "/opt/local-path-provisioner-rwx/*"
       # -- Exempt namespaces
       exempt_namespaces: '[ "zarf", "uds-dev-stack" ]'
