--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Output debug info
         working-directory: k3d
-        run: uds zarf kubectl get events -A --sort-by='.lastTimestamp'
+        run: uds zarf tools kubectl get events -A --sort-by='.lastTimestamp'
 
       - name: Remove k3d pkg
         working-directory: k3d
