--- a/k3d/tasks/deploy.yaml
+++ b/k3d/tasks/deploy.yaml
@@ -4,4 +4,4 @@ tasks:
       - description: "Deploy the requested Zarf Package"
         cmd: |
           set -e
-          zarf package deploy build/zarf-package-dubbd-k3d-amd64-*.tar.zst --confirm
+          zarf package deploy build/zarf-package-dubbd-k3d-amd64-*.tar.zst --confirm --no-progress
