--- a/k3d/tasks/setup.yaml
+++ b/k3d/tasks/setup.yaml
@@ -3,7 +3,7 @@ tasks:
     actions:
       - description: "Create the K3d cluster"
         # renovate: datasource=github-tags depName=defenseunicorns/uds-k3d versioning=semver
-        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.6.0 --confirm --set K3D_EXTRA_ARGS='--agents 2' --no-progress"
+        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.6.0 --confirm --no-progress"
 
       - description: "Initialize the cluster with Zarf"
         # renovate: datasource=github-tags depName=defenseunicorns/init versioning=semver
