--- a/values/loki.yaml
+++ b/values/loki.yaml
@@ -7,6 +7,33 @@ loki:
         replication_factor: 1
       extraMemberlistConfig:
         rejoin_interval: 120s
+      # https://grafana.com/docs/loki/latest/configure/#limits_config
+      limits_config:
+        allow_structured_metadata: false
+      # https://github.com/grafana/loki/blob/helm-loki-6.3.4/docs/sources/setup/upgrade/_index.md#structured-metadata-open-telemetry-schemas-and-indexes
+      schemaConfig:
+        configs:
+          - from: "2022-01-11"
+            store: boltdb-shipper
+            object_store: '{{ .Values.loki.storage.type }}'
+            schema: v12
+            index:
+              prefix: loki_index_
+              period: 24h
+          - from: "2023-08-01"
+            store: tsdb
+            object_store: '{{ .Values.loki.storage.type }}'
+            schema: v12
+            index:
+              prefix: loki_tsdb_
+              period: 24h
+          - from: "2025-12-31"
+            store: tsdb
+            object_store: '{{ .Values.loki.storage.type }}'
+            schema: v13
+            index:
+              prefix: loki_tsdb_
+              period: 24h
     # Values for Monolith strategy
     singleBinary:
       persistence:
