--- a/k3d/tasks/setup.yaml
+++ b/k3d/tasks/setup.yaml
@@ -3,7 +3,7 @@ tasks:
     actions:
       - description: "Create the K3d cluster"
         # renovate: datasource=github-tags depName=defenseunicorns/uds-k3d versioning=semver
-        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.7.0 --confirm --no-progress"
+        cmd: "zarf package deploy oci://defenseunicorns/uds-k3d:0.7.0 --set=K3D_IMAGE=rancher/k3s:v1.29.6-k3s1 --confirm --no-progress"
 
       - description: "Initialize the cluster with Zarf"
         # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
