ci: rm the overrideBootstrapCommand in the eksctl config

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -42,6 +42,6 @@ managedNodeGroups:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     ami: "###ZARF_VAR_AMI_ID###"
     amiFamily: AmazonLinux2
-    overrideBootstrapCommand: |
-      #!/bin/bash
-      /etc/eks/bootstrap.sh ###ZARF_VAR_CLUSTER_NAME### --container-runtime containerd
+#    overrideBootstrapCommand: |
+#      #!/bin/bash
+#      /etc/eks/bootstrap.sh ###ZARF_VAR_CLUSTER_NAME### --container-runtime containerd
