ci: update the cluster output and example AMI

--- a/.github/workflows/test-dubbd-aws-upgrade.yaml
+++ b/.github/workflows/test-dubbd-aws-upgrade.yaml
@@ -90,7 +90,7 @@ jobs:
 
       - name: Show Cluster
         run: |
-          kubectl get nodes
+          kubectl get nodes -o wide
           kubectl config get-contexts
 
       - name: Zarf init
