--- a/.github/test-infra/eks/zarf.yaml
+++ b/.github/test-infra/eks/zarf.yaml
@@ -9,9 +9,9 @@ variables:
     prompt: true
   - name: PERMISSIONS_BOUNDARY_ARN
   - name: PERMISSIONS_BOUNDARY_NAME
-  - name: AMI_ID
-    # EKS-optimized Kubernetes node based on Amazon Linux 2023, (k8s: 1.29.3, containerd: *)
-    default: ami-0844b244c49b1dc67
+#  - name: AMI_ID
+#    # EKS Kubernetes Worker AMI with AmazonLinux2 image, (k8s: 1.29.3, containerd: 1.7.*)
+#    default: ami-0b5962c42db856256
 
 components:
   - name: load-eksctl
