ci: fix debug output commands

--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -133,7 +133,7 @@ jobs:
         if: always()
         working-directory: k3d
         run: |
-          zarf tools kubectl describe nodes -owide
+          zarf tools kubectl describe nodes
           zarf tools kubectl get pods -owide -A
           zarf tools kubectl get events -A --sort-by='.lastTimestamp'
 
