--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -18,11 +18,11 @@ iam:
 
 addons:
   - name: aws-ebs-csi-driver
-    attachPolicyARNs:
-      - arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy
     permissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     tags:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
+    wellKnownPolicies:
+      ebsCSIController: true
 
   - name: vpc-cni
     attachPolicyARNs:
@@ -40,6 +40,8 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
+      withAddonPolicies:
+        ebs: true
 #    ami: "###ZARF_VAR_AMI_ID###"
 #    amiFamily: AmazonLinux2
 #    overrideBootstrapCommand: |
