ci: update eks config for ami family

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -21,8 +21,6 @@ addons:
     permissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     tags:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
-    wellKnownPolicies:
-      ebsCSIController: true
 
   - name: vpc-cni
     attachPolicyARNs:
@@ -40,10 +38,8 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
-      withAddonPolicies:
-        ebs: true
+    amiFamily: AmazonLinux2
 #    ami: "###ZARF_VAR_AMI_ID###"
-#    amiFamily: AmazonLinux2
 #    overrideBootstrapCommand: |
 #      #!/bin/bash
 #      /etc/eks/bootstrap.sh ###ZARF_VAR_CLUSTER_NAME### --container-runtime containerd
