--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -134,6 +134,7 @@ jobs:
         working-directory: k3d
         run: |
           zarf tools kubectl describe nodes
+          zarf tools kubectl get sc
           zarf tools kubectl get pods -owide -A
           zarf tools kubectl get events -A --sort-by='.lastTimestamp'
 
