--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -38,6 +38,8 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
+      withAddonPolicies:
+        ebs: true
     amiFamily: AmazonLinux2
 #    ami: "###ZARF_VAR_AMI_ID###"
 #    overrideBootstrapCommand: |
