ci: add default sc in EKS workflow and rm amiFamily

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -41,7 +41,7 @@ managedNodeGroups:
       withAddonPolicies:
         cloudWatch: true
         ebs: true
-    amiFamily: AmazonLinux2
+#    amiFamily: AmazonLinux2
 #    ami: "###ZARF_VAR_AMI_ID###"
 #    overrideBootstrapCommand: |
 #      #!/bin/bash
