ci: update to use eksctl configvalue for default sc

--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -18,6 +18,8 @@ iam:
 
 addons:
   - name: aws-ebs-csi-driver
+    configurationValues: |-
+      defaultStorageClass.enabled: true
     permissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     tags:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
