--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -19,7 +19,8 @@ iam:
 addons:
   - name: aws-ebs-csi-driver
     configurationValues: |-
-      defaultStorageClass.enabled: true
+      defaultStorageClass:
+        enabled: true
     permissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     tags:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
