--- a/.github/test-infra/eks/config.yaml
+++ b/.github/test-infra/eks/config.yaml
@@ -4,7 +4,7 @@ kind: ClusterConfig
 metadata:
   name: "###ZARF_VAR_CLUSTER_NAME###"
   region: us-west-2
-  version: "1.29"
+  version: "1.30"
   tags:
     PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
 
@@ -18,8 +18,9 @@ iam:
 
 addons:
   - name: aws-ebs-csi-driver
-    attachPolicyARNs:
-      - arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy
+    configurationValues: |-
+      defaultStorageClass:
+        enabled: true
     permissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
     tags:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
@@ -40,8 +41,22 @@ managedNodeGroups:
       PermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_NAME###"
     iam:
       instanceRolePermissionsBoundary: "###ZARF_VAR_PERMISSIONS_BOUNDARY_ARN###"
-#    ami: "###ZARF_VAR_AMI_ID###"
+      withAddonPolicies:
+        cloudWatch: true
+        ebs: true
 #    amiFamily: AmazonLinux2
+#    ami: "###ZARF_VAR_AMI_ID###"
 #    overrideBootstrapCommand: |
 #      #!/bin/bash
 #      /etc/eks/bootstrap.sh ###ZARF_VAR_CLUSTER_NAME### --container-runtime containerd
+
+cloudWatch:
+  clusterLogging:
+    # enable specific types of cluster control plane logs
+    enableTypes: ["*"]
+    # all supported types: "api", "audit", "authenticator", "controllerManager", "scheduler"
+    # supported special values: "*" and "all"
+
+    # Sets the number of days to retain the logs for (see [CloudWatch docs](https://docs.aws.amazon.com/AmazonCloudWatchLogs/latest/APIReference/API_PutRetentionPolicy.html#API_PutRetentionPolicy_RequestSyntax)).
+    # By default, log data is stored in CloudWatch Logs indefinitely.
+    logRetentionInDays: 1
